fix: set post image path ( image.filename )
post content path:
content/<langCode>/<contentName>/<postName>/index.md

post params:
image:
  filename: /assets/media/<contenetName>/<postName>/<img>

post image path:
assets/media/<contentName>/<postName>/<img | featured.png>

--- a/layouts/partials/page_header.html
+++ b/layouts/partials/page_header.html
@@ -1,5 +1,5 @@
 {{ $page := . }}
-{{ $featured := (.Resources.ByType "image").GetMatch "*featured*" }}
+{{ $resource := (partial "functions/get_post_image" .) }}
 {{ $anchor := $page.Params.image.focal_point | default "Smart" }}
 
 {{/* Set default titles for node pages */}}
