--- a/layouts/partials/views/compact.html
+++ b/layouts/partials/views/compact.html
@@ -74,7 +74,8 @@
 
   </div>
   <div class="ml-3">
-    {{ $resource := ($item.Resources.ByType "image").GetMatch "*featured*" }}
+    {{ $resource := (partial "functions/get_post_image" $item) }}
+
     {{ with $resource }}
     {{ $image := .Resize "150x webp" }}
     <a href="{{$link}}" {{ $target | safeHTMLAttr }}>
