--- a/layouts/partials/page_header.html
+++ b/layouts/partials/page_header.html
@@ -1,5 +1,5 @@
 {{ $page := . }}
-{{ $resource := (partial "functions/get_post_image" .) }}
+{{ $featured := (partial "functions/get_post_image" .) }}
 {{ $anchor := $page.Params.image.focal_point | default "Smart" }}
 
 {{/* Set default titles for node pages */}}
