bug fixed: var name err => $text_color_style

--- a/layouts/partials/widget_page.html
+++ b/layouts/partials/widget_page.html
@@ -124,7 +124,7 @@
   <section id="{{$hash_id}}" class="
       home-section
       {{$widget_class}}
-      {{$$text_color_style}}
+      {{$text_color_style}}
       {{with $css_classes}}{{.}}{{end}}"
       {{with $style}}style="{{. | safeCSS}}"{{end}}
       {{print $extra_attributes | safeHTMLAttr}}>
