--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -15,10 +15,10 @@
 
 <header class="header--fixed">
   <nav class="navbar navbar-expand-lg navbar-light compensate-for-scrollbar" id="navbar-main">
-    <div class="container-xl">
+    <div class="container-xl h-100">
 
       {{if $show_logo}}
-      <div class="d-none d-lg-inline-flex">
+      <div class="d-none d-lg-flex h-100">
         <a class="navbar-brand" href="{{ "/" | relLangURL }}">
           {{- if $has_logo -}}
             <img src="{{ $logo.RelPermalink }}" alt="{{ site.Title }}"
@@ -63,13 +63,13 @@
           {{ if .HasChildren }}
           <li class="nav-item dropdown">
             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true">
-              {{- .Pre -}}<span>{{ .Name | safeHTML }}</span>{{- .Post -}}
+              {{- .Pre -}}<span>{{ i18n .Name | default .Name | safeHTML }}</span>{{- .Post -}}
               <span class="caret"></span>
             </a>
             <div class="dropdown-menu">
               {{ range .Children }}
                 <a class="dropdown-item" href="{{ .URL | relLangURL }}"{{ if $.IsHome }} data-target="{{ .URL }}"{{ end }}>
-                  {{- .Pre -}}<span>{{ .Name | safeHTML }}</span>{{- .Post -}}
+                  {{- .Pre -}}<span>{{ i18n .Name | default .Name | safeHTML }}</span>{{- .Post -}}
                 </a>
               {{ end }}
             </div>
@@ -111,7 +111,7 @@
 
           <li class="nav-item">
             <a class="nav-link {{if and $highlight_active_link $is_link_in_current_path }} active{{end}}" href="{{.URL | relLangURL}}"{{ if and $is_widget_page $is_same_page }} data-target="{{$hash}}"{{ end }}{{ ($.Scratch.Get "target") | safeHTMLAttr }}>
-              {{- .Pre -}}<span>{{ .Name | safeHTML }}</span>{{- .Post -}}
+              {{- .Pre -}}<span>{{ i18n .Name | default .Name | safeHTML }}</span>{{- .Post -}}
             </a>
           </li>
 
@@ -135,7 +135,7 @@
 
           <li class="nav-item">
             <a class="nav-link" href="{{ .URL | relLangURL }}"{{ if $.IsHome }} data-target="{{ .URL }}"{{ end }}{{ ($.Scratch.Get "target") | safeHTMLAttr }}>
-              {{- .Pre -}}<span>{{ .Name | safeHTML }}</span>{{- .Post -}}
+              {{- .Pre -}}<span>{{ i18n .Name | default .Name | safeHTML }}</span>{{- .Post -}}
             </a>
           </li>
 
@@ -190,9 +190,9 @@
         <li class="nav-item dropdown i18n-dropdown">
           <a href="#" class="nav-link {{ if $show_current_language }}dropdown-toggle{{end}}" data-toggle="dropdown"
              aria-haspopup="true" aria-label="{{ i18n "languages" | default "Languages" }}">
-            <i class="fas fa-globe mr-1" aria-hidden="true"></i>
+            <i class="fas fa-globe" aria-hidden="true"></i>
             {{- if $show_current_language -}}
-              <span class="d-none d-lg-inline">{{ index site.Data.i18n.languages .Lang }}</span>
+              <span class="d-none d-lg-inline pl-2">{{ index site.Data.i18n.languages .Lang }}</span>
             {{- end -}}
           </a>
           <div class="dropdown-menu">
