fix: set navbar & drop-menu

--- a/assets/scss/_vendor/bootstrap/_navbar.scss
+++ b/assets/scss/_vendor/bootstrap/_navbar.scss
@@ -51,8 +51,8 @@
 
 .navbar-brand {
   display: inline-block;
-  padding-top: $navbar-brand-padding-y;
-  padding-bottom: $navbar-brand-padding-y;
+  margin-top: $navbar-brand-padding-y;
+  margin-bottom: $navbar-brand-padding-y;
   margin-right: $navbar-padding-x;
   @include font-size($navbar-brand-font-size);
   line-height: inherit;
