--- a/assets/scss/bootstrap_variables.scss
+++ b/assets/scss/bootstrap_variables.scss
@@ -17,8 +17,16 @@ $navbar-toggler-padding-x: 0;
 $navbar-toggler-font-size: 18px;
 $navbar-brand-font-size: 1.2rem;
 
+// Theme variables accesses bootstrap
 $navbar-light-color: $sta-menu-text;
 $navbar-light-active-color: $sta-menu-text-active;
 $navbar-light-brand-color: $sta-menu-title;
 $navbar-light-brand-hover-color: $navbar-light-active-color;
 $navbar-light-toggler-border-color: transparent;
+
+
+// Wowchemy proto append
+$dropdown-min-width: fit-content;
+$dropdown-border-radius: 8px;
+$dropdown-border-color: rgba(127, 127, 127, 0.5);
+$input-border-color: rgba(127, 127, 127, 0.5);
