--- a/assets/scss/_vendor/bootstrap/_dropdown.scss
+++ b/assets/scss/_vendor/bootstrap/_dropdown.scss
@@ -19,10 +19,11 @@
   top: 100%;
   left: 0;
   z-index: $zindex-dropdown;
+  overflow: hidden;
   display: none; // none by default, but block on "open" of the menu
   float: left;
   min-width: $dropdown-min-width;
-  padding: $dropdown-padding-y $dropdown-padding-x;
+  padding: $dropdown-padding-x;
   margin: $dropdown-spacer 0 0; // override default ul
   @include font-size($dropdown-font-size);
   color: $dropdown-color;
@@ -31,9 +32,14 @@
   background-color: $dropdown-bg;
   background-clip: padding-box;
   border: $dropdown-border-width solid $dropdown-border-color;
+  //border: $sta-menu-border;
   @include border-radius($dropdown-border-radius);
   @include box-shadow($dropdown-box-shadow);
 }
+
+//.dark .dropdown-menu {
+//  border: $sta-dark-menu-border;
+//}
 
 @each $breakpoint in map-keys($grid-breakpoints) {
   @include media-breakpoint-up($breakpoint) {
@@ -124,10 +130,18 @@
   display: block;
   width: 100%; // For `<button>`s
   padding: $dropdown-item-padding-y $dropdown-item-padding-x;
+
+  &:first-child {
+    padding-top: calc( #{$dropdown-padding-y} + #{$dropdown-item-padding-y} );
+  }
+  &:last-child {
+    padding-bottom: calc( #{$dropdown-padding-y} + #{$dropdown-item-padding-y} );
+  }
+
   clear: both;
   font-weight: $font-weight-normal;
   color: $dropdown-link-color;
-  text-align: inherit; // For `<button>`s
+  text-align: center; // For `<button>`s
   text-decoration: if($link-decoration == none, null, none);
   white-space: nowrap; // prevent links from randomly breaking onto new lines
   background-color: transparent; // For `<button>`s
