--- a/assets/scss/wowchemy/components/_nav.scss
+++ b/assets/scss/wowchemy/components/_nav.scss
@@ -30,19 +30,44 @@
 .navbar {
   height: 70px;
   background: $sta-menu-primary;
-  box-shadow: 0 0.125rem 0.25rem 0 rgba(0, 0, 0, 0.11);
+  //backdrop-filter: $sta-menu-blur;
+  //-webkit-backdrop-filter: $sta-menu-blur;
+
+  //border-bottom: $sta-menu-border;
+  //box-shadow: 0 0.125rem 0.25rem 0 rgba(0, 0, 0, 0.11);
   font-size: #{$sta-font-size-small}px;
 
   // Remove Bootstrap's navbar v-padding and assign v-padding to logo separately to maximise logo size.
   // Otherwise, Bootstrap's navbar v-padding causes issue with logo fitting within fixed 50px height bar in md-lg sizes.
   padding: 0 1rem;
 
+  .main-menu-item.collapse, .navbar-nav, .nav-icons {
+    height: 100%;
+  }
+
   .nav-item {
     // For z-index compatibility with logo on mobile layout, otherwise nav-item can't be clicked when logo present.
     position: relative;
+    display: flex;
+    align-items: center;
+    &:hover {
+      //background-color: $sta-menu-hover;
+    }
   }
+  .nav-icons {
+    display: flex;
+    align-items: center;
+  }
+  .nav-icons > .nav-item {
+    height: fit-content;
+  }
+
   @include media-breakpoint-down(md) {
     height: 50px;
+
+    .main-menu-item.collapse {
+      height: fit-content;
+    }
 
     .navbar-nav-scroll {
       width: 100%;
@@ -73,6 +98,14 @@
         color: $sta-menu-text-active !important;
       }
     }
+
+    &:not(.nav-icons) {
+      .nav-item {
+        display: flex;
+        justify-content: center;
+        min-width: 72px;
+      }
+    }
   }
 
   .dropdown-menu {
@@ -89,7 +122,8 @@
 
 .dark .navbar {
   background: $sta-dark-menu-primary;
-  box-shadow: 0 0.125rem 0.25rem 0 rgba(255, 255, 255, 0.11);
+  //border-bottom: $sta-dark-menu-border;
+  //box-shadow: 0 0.125rem 0.25rem 0 rgba(255, 255, 255, 0.11);
   .navbar-nav {
     .nav-link {
       color: rgba($sta-dark-menu-text, 0.85);
@@ -105,6 +139,9 @@
         color: $sta-dark-menu-text-active !important;
       }
     }
+  }
+  .nav-item:hover {
+    //background-color: $sta-dark-menu-hover;
   }
   .dropdown-item.active,
   .dropdown-item-active {
@@ -135,6 +172,13 @@
     // Remove dropdown arrow on small devices (when language name isn't displayed).
     content: none;
   }
+
+  .navbar-nav:not(.nav-icons) {
+    .nav-item {
+      justify-content: flex-start !important;
+      min-width: unset !important;
+    }
+  }
 }
 
 // Prevent language and theme selectors rendering off page.
@@ -159,12 +203,12 @@
 */
 
 .navbar-brand {
-  // Set v-padding to 5px to align with 50/70px responsive max navbar heights.
-  padding-top: 5px;
-  padding-bottom: 5px;
   font-weight: bold;
   position: relative;
   z-index: 1030; // For z-index clickable mobile logo.
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .dark .navbar-brand {
@@ -231,22 +275,30 @@
   #navbar-main .main-menu-item .nav-item .nav-link {
     padding: 5px 15px !important;
   }
+
+  .i18n-dropdown {
+    padding: 0 !important;
+  }
 }
 
 ul.nav-icons {
   list-style-type: none;
-  font-size: 18px;
+  font-size: 16px;
   padding: 0.5rem 0 0.5rem 0;
   margin: 0;
 }
 
 ul.nav-icons li {
-  display: inline;
-  padding-right: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px !important;
+  border-radius: 20px;
 }
 
 ul.nav-icons li:last-of-type {
-  padding-right: 0;
+  margin-right: 0;
 }
 
 ul.nav-icons li.nav-item a.nav-link {
@@ -258,9 +310,16 @@ ul.nav-icons li.nav-item a.nav-link {
   color: $sta-dark-menu-text !important;
 }
 
+.i18n-dropdown {
+  padding: 0 16px;
+  min-width: 40px;
+  width: fit-content !important;
+}
+
 .dropdown-item {
   background-color: $sta-menu-primary !important;
   color: $sta-menu-text !important;
+  height: 100%;
 }
 
 .dark .dropdown-item {
