--- a/assets/scss/wowchemy/components/_card.scss
+++ b/assets/scss/wowchemy/components/_card.scss
@@ -3,16 +3,20 @@
  **************************************************/
 
 .card-simple {
-  background: #fff;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.04);
+  //background: #fff;
   border: 1px solid rgba(0, 0, 0, 0.09);
-  border-radius: 3px;
-  margin-top: 20px;
+  border-radius: 16px;
+  margin-top: 1.8rem;
   padding: 15px 20px 15px 20px;
-}
 
-.card-simple:first-of-type {
-  margin-top: 0;
+  .img-hover-zoom {
+    border-radius: 8px;
+  }
+
+  .article-banner {
+    height: 320px;
+    object-fit: cover;
+  }
 }
 
 .card-simple p.read-more {
@@ -20,9 +24,9 @@
 }
 
 .dark .card-simple {
-  background: rgb(40, 42, 54);
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.04);
-  border: 1px solid rgb(68, 71, 90);
+  backdrop-filter: brightness(1.2);
+  //box-shadow: 0 1px 4px rgba(0, 0, 0, 0.04);
+  //border: $sta-dark-menu-border;
 }
 
 /* In page listings, display the linked summaries as normal text except for the hover cursor. */
@@ -41,6 +45,8 @@ a.summary-link {
 }
 
 .card .card-image {
+  border-radius: 16px;
+  overflow: hidden;
   display: block;
   position: relative;
   min-height: 100px;
