--- a/assets/scss/wowchemy/layouts/_footer.scss
+++ b/assets/scss/wowchemy/layouts/_footer.scss
@@ -1,7 +1,7 @@
 // Footer styles
 
 footer {
-  margin: 4rem 0 0;
+  margin: 1.25rem 0;
   width: 100%;
 }
 
@@ -12,6 +12,7 @@ footer p {
 
 footer .powered-by {
   font-size: 0.67rem;
+  margin-bottom: 0.5rem;
 }
 
 .site-footer {
@@ -43,3 +44,34 @@ footer .powered-by {
   height: 22px;
   vertical-align: text-bottom;
 }
+
+//.footer-contact {
+//  display: flex;
+//  flex-direction: row;
+//  justify-content: center;
+//  align-items: center;
+//  margin-bottom: 8px;
+//  div {
+//    padding: 2px 8px;
+//  }
+//  a {
+//    cursor: pointer;
+//  }
+//  i {
+//    font-size: 1.15rem;
+//    line-height: 1;
+//  }
+//}
+//
+//.dark .footer-contact a {
+//  filter: saturate(0) brightness(0.8);
+//  &:hover {
+//    filter: saturate(0) brightness(1.3);
+//  }
+//}
+//.footer-contact a {
+//  filter: saturate(0) brightness(0.8);
+//  &:hover {
+//    filter: saturate(0) brightness(0.2);
+//  }
+//}
