--- a/layouts/partials/functions/parse_theme.html
+++ b/layouts/partials/functions/parse_theme.html
@@ -61,12 +61,12 @@
 {{ end }}
 
 {{- $scr.Set "background" ($theme_day.background | default "rgb(255, 255, 255)") -}}
-{{- $scr.Set "home_section_odd" ($theme_day.home_section_odd | default "rgb(255, 255, 255)") -}}
-{{- $scr.Set "home_section_even" ($theme_day.home_section_even | default "rgb(247, 247, 247)") -}}
+{{- $scr.Set "home_section_odd" ($theme_day.home_section_odd | default "transparent") -}}
+{{- $scr.Set "home_section_even" ($theme_day.home_section_even | default "transparent") -}}
 
-{{- $scr.Set "dark_background" ($theme_night.background | default "hsla(231, 15%, 16%, 1)") -}}
-{{- $scr.Set "dark_home_section_odd" ($theme_night.home_section_odd | default "hsla(231, 15%, 18%, 1)") -}}
-{{- $scr.Set "dark_home_section_even" ($theme_night.home_section_even | default "hsla(231, 15%, 16%, 1)") -}}
+{{- $scr.Set "dark_background" ($theme_night.background | default "rgb(0, 0, 0)") -}}
+{{- $scr.Set "dark_home_section_odd" ($theme_night.home_section_odd | default "transparent") -}}
+{{- $scr.Set "dark_home_section_even" ($theme_night.home_section_even | default "transparent") -}}
 
 {{- $scr.Set "link" ($theme_day.link | default $theme_day.primary | default ($scr.Get "primary")) -}}
 {{- $scr.Set "link_hover" ($theme_day.link_hover | default $theme_day.primary | default ($scr.Get "primary")) -}}
