--- a/layouts/partials/functions/parse_theme.html
+++ b/layouts/partials/functions/parse_theme.html
@@ -53,7 +53,6 @@
 
 {{/* Load Theme. */}}
 
-
 {{ if site.Params.appearance.theme_day }}
   {{- $scr.Set "primary" ($theme_day.primary | default "#1565c0") -}}
 {{ else }}
@@ -85,3 +84,10 @@
 {{- $scr.Set "dark_menu_text" ($theme_night.menu_text | default "white") -}}
 {{- $scr.Set "dark_menu_text_active" ($theme_night.menu_text_active | default "rgba(255, 255, 255, 0.8)") -}}
 {{- $scr.Set "dark_menu_title" ($theme_night.menu_title | default "white") -}}
+
+{{/* Load Theme Design. */}}
+{{ $theme := (index site.Data.themes $theme_day_index) }}
+{{- $scr.Set "menu_hover" ($theme.menu_hover | default false) -}}
+{{- $scr.Set "menu_border" ($theme.menu_border | default false) -}}
+{{- $scr.Set "menu_shadow" ($theme.menu_shadow | default false) -}}
+{{- $scr.Set "menu_blur" ($theme.menu_blur | default false) -}}
