--- a/assets/scss/wowchemy/components/_nav.scss
+++ b/assets/scss/wowchemy/components/_nav.scss
@@ -22,8 +22,8 @@
 }
 
 .dropdown-menu {
-  background-color: $sta-menu-primary !important;
-  color: $sta-menu-text !important;
+  background-color: $sta-menu-primary;
+  color: $sta-menu-text;
   z-index: 1032; // I18n dropdown over mobile expanded menu.
 }
 
