--- a/assets/scss/wowchemy_proto/navbar.scss
+++ b/assets/scss/wowchemy_proto/navbar.scss
@@ -30,7 +30,7 @@
   }
 
   @if($sta-menu-shadow) {
-    box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.2);
   }
 
   @if(#{$sta-menu-border}) {
