fix: update card simple style

--- a/assets/scss/wowchemy/components/_card.scss
+++ b/assets/scss/wowchemy/components/_card.scss
@@ -3,8 +3,6 @@
  **************************************************/
 
 .card-simple {
-  //background: #fff;
-  border: 1px solid rgba(0, 0, 0, 0.09);
   border-radius: 16px;
   margin-top: 1.8rem;
   padding: 15px 20px 15px 20px;
@@ -23,8 +21,15 @@
   margin: 0;
 }
 
+.card-simple {
+  backdrop-filter: brightness(1.2);
+  -webkit-backdrop-filter: brightness(1.2);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
 .dark .card-simple {
   backdrop-filter: brightness(1.2);
+  -webkit-backdrop-filter: brightness(1.2);
+  border: 1px solid rgba(255, 255, 255, 0.1);
   //box-shadow: 0 1px 4px rgba(0, 0, 0, 0.04);
   //border: $sta-dark-menu-border;
 }
