--- a/layouts/partials/widgets/experience.html
+++ b/layouts/partials/widgets/experience.html
@@ -10,6 +10,7 @@
   {{ $exp_len := len $page.Params.experience }}
 
   {{/* Default to user's custom order (as requested in #1761) as Hugo doesn't support multiple sorts on params. */}}
+
   {{ range $idx, $key := $page.Params.experience }}
   <div class="row experience">
     <!-- Timeline -->
@@ -19,7 +20,9 @@
         <div class="col">&nbsp;</div>
       </div>
       <div class="m-2">
-        <span class="badge badge-pill border {{if not .date_end}}exp-fill{{end}}">&nbsp;</span>
+        {{ $expFill := false }}
+        {{ $expFill := and (.date_start) (not .date_end) }}
+        <span class="badge badge-pill border {{if $expFill}}exp-fill{{end}}">&nbsp;</span>
       </div>
       <div class="row h-50">
         <div class="col {{if lt $idx (sub $exp_len 1)}}border-right{{end}}">&nbsp;</div>
@@ -48,12 +51,17 @@
                 {{- with .company_url}}<a href="{{.}}" target="_blank" rel="noopener">{{end}}{{.company | markdownify | emojify}}{{with .company_url}}</a>{{end -}}
               </div>
               <div class="text-muted exp-meta">
-                {{ (time .date_start) | time.Format ($page.Params.date_format | default "January 2006") }} –
-                {{ if .date_end}}
-                  {{ (time .date_end) | time.Format ($page.Params.date_format | default "January 2006") }}
-                {{else}}
-                  {{ i18n "present" | default "Present" }}
-                {{end}}
+                {{ if .date }}
+                  {{ (time .date) | time.Format ($page.Params.date_format | default "January 2006") }}
+                {{ else if .date_start }}
+                  {{ (time .date_start) | time.Format ($page.Params.date_format | default "January 2006") }} –
+                  {{ if .date_end}}
+                    {{ (time .date_end) | time.Format ($page.Params.date_format | default "January 2006") }}
+                  {{else}}
+                    {{ i18n "present" | default "Present" }}
+                  {{end}}
+                {{ end }}
+
                 {{with .location}}
                   <span class="middot-divider"></span>
                   <span>{{.}}</span>
