--- a/assets/scss/wowchemy/components/_card.scss
+++ b/assets/scss/wowchemy/components/_card.scss
@@ -15,6 +15,15 @@
     height: 320px;
     object-fit: cover;
   }
+
+  .article-style > p {
+    max-height: 100px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+  }
 }
 
 .card-simple p.read-more {
@@ -26,6 +35,7 @@
   -webkit-backdrop-filter: brightness(1.2);
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
+
 .dark .card-simple {
   backdrop-filter: brightness(1.2);
   -webkit-backdrop-filter: brightness(1.2);
