fix: update card title color

--- a/assets/scss/wowchemy/_dark.scss
+++ b/assets/scss/wowchemy/_dark.scss
@@ -3,7 +3,7 @@
  **************************************************/
 
 .dark .article-title a {
-  color: #fff;
+  color: #fff !important;
 }
 
 .dark .pagination li > a,
