set post image path: assets/media/post/<image>

--- a/layouts/partials/functions/get_post_image.html
+++ b/layouts/partials/functions/get_post_image.html
@@ -3,7 +3,8 @@
 {{ $resource := ($item.Resources.ByType "image").GetMatch "*featured*" }}
 
 {{ if not $resource }}
-    {{ $folderDir := (path.Join "media" (path.Dir $item.Path)) }}
+    {{/* $folderDir := (path.Join "media" (path.Dir $item.Path)) */}}
+    {{ $folderDir := (path.Join "media" "post") }}
     {{ if os.FileExists (path.Join "assets" $folderDir) }}
         {{ $imageBaseName := ($item.Params.image.filename | default "featured.png") }}
         {{ $imageBaseName = (path.Base $imageBaseName) }}
