--- a/layouts/partials/page_header.html
+++ b/layouts/partials/page_header.html
@@ -49,13 +49,16 @@
 {{ $image_container := "" }}
 {{ if eq $placement 2}}
   {{ $image_container = "container" }}
-  {{ $image = $featured.Fit "1200x2500 webp" }}
+  {{/* $image = $featured.Fit "1200x2500 webp" */}}
+  {{ $image = $featured.Fit "1200x2500 jpg" }}
 {{else if eq $placement 3}}
   {{ $image_container = "container-fluid" }}
-  {{ $image := $featured.Fit "2560x2560 webp" }}
+  {{/* $image := $featured.Fit "2560x2560 webp" */}}
+  {{ $image := $featured.Fit "2560x2560 jpg" }}
 {{else}}
   {{ $image_container = "article-container" }}
-  {{ $image = $featured.Fit "720x2500 webp" }}
+  {{/* $image = $featured.Fit "720x2500 webp" */}}
+  {{ $image = $featured.Fit "720x2500 jpg" }}
 {{end}}
 
 <div class="article-container pt-3">
