--- a/layouts/shortcodes/gallery.html
+++ b/layouts/shortcodes/gallery.html
@@ -7,7 +7,8 @@
 
 {{/* Gallery options */}}
 {{ $sort_order := .Get "order" | default "asc" }}
-{{ $resize_options := printf "%s webp" (.Get "resize_options" | default "x190") }}
+{{/* $resize_options := printf "%s webp" (.Get "resize_options" | default "x190") */}}
+{{ $resize_options := printf "%s jpg" (.Get "resize_options" | default "x190") }}
 
 <div class="gallery">
 
