fix: add card & compact summary ellipsis

--- a/assets/scss/wowchemy/components/_card.scss
+++ b/assets/scss/wowchemy/components/_card.scss
@@ -16,14 +16,14 @@
     object-fit: cover;
   }
 
-  .article-style > p {
-    max-height: 100px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 3;
-  }
+  //.article-style > p {
+  //  max-height: 100px;
+  //  overflow: hidden;
+  //  text-overflow: ellipsis;
+  //  display: -webkit-box;
+  //  -webkit-box-orient: vertical;
+  //  -webkit-line-clamp: 3;
+  //}
 }
 
 .card-simple p.read-more {
