fix: set section background format: webp => png

--- a/layouts/partials/widget_page.html
+++ b/layouts/partials/widget_page.html
@@ -54,7 +54,7 @@
     {{/* See Hugo note on linking assets in styles: https://github.com/gohugoio/hugoThemes#common-permalink-issues */}}
     {{ $bg_img := resources.Get (printf "media/%s" $bg.image) }}
     {{ if $bg_img }}
-      {{ $bg_img = $bg_img.Fit "1920x1920 webp" }}
+      {{ $bg_img = $bg_img.Fit "1920x1920 png" }}
       {{ $style_bg = printf "%sbackground-image: url('%s');" $style_bg $bg_img.Permalink }}
     {{ else }}
       {{ errorf "Couldn't find `%s` in the `assets/media/` folder - please add it." $bg.image }}
